test/extern/ferguson/externblock/two-modules2-error.good
two-modules2-error.chpl:12: error: 'x' undeclared (first use this function)
